<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/artikel_name"
        android.support.design:hintAnimationEnabled="true"
        android.support.design:hintEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="sentences"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ammountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/artikelzahl"
        android.support.design:hintAnimationEnabled="true"
        android.support.design:hintEnabled="true">

        <EditText
            android:id="@+id/ammountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2" />
    </android.support.design.widget.TextInputLayout>

    <!--<android.support.design.widget.TextInputLayout
        android:id="@+id/verwalterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/verwalterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Verwalter" />
    </android.support.design.widget.TextInputLayout>-->

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radio_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/it" />

        <RadioButton
            android:id="@+id/radio_verwaltung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Verwaltung" />

        <RadioButton
            android:id="@+id/radio_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Person" />

    </RadioGroup>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple_effect"
        android:drawableRight="@mipmap/ic_add_shopping_cart_white_24dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:text="@string/Bestellen"
        android:textColor="@color/white" />

</LinearLayout>

